discussion/kv_engine/151993/151993_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Put all temp files from memcached_testapp in one directory

Let each instance of memcached_testapp create its own sub directory
and put all of its files in that sub directory instead of creating
temp files in the same directory as all of the other tests

Change-Id: I0d122f46b03b4ed11515773695771d800be0d0b0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-04-27 10:49:03.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-27 11:19:08.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10207/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10207/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18007/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30190/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/tests/testapp/testapp_audit.cc:51:15:
error: non-const lvalue reference to type "basic_string<...>" cannot bind to a temporary of type "basic_string<...>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30190/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35291/ : FAILURE

Compile error at ..\kv_engine\tests\testapp\testapp_environment.cc(382): error C2664: "int setenv(const char *,const char *,int)": cannot convert argument 2 from "const boost::filesystem::path::value_type *" to "const char *" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35291/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8535/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_environment.cc:436:23: error: no matching constructor for initialization of "std::ofstream" (aka "basic_ofstream<char>") [clang-diagnostic-error]
        std::ofstream out(audit_file_name);
                      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:697:7: note: candidate constructor not viable: no known conversion from "const boost::filesystem::path" to "const char *" for 1st argument
      basic_ofstream(const char* __s,
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:715:7: note: candidate constructor not viable: no known conversion from "const boost::filesystem::path" to "const std::string" (aka "const basic_string<char>") for 1st argument
      basic_ofstream(const std::string& __s,
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:723:7: note: candidate constructor not viable: no known conversion from "const boost::filesystem::path" to "const std::basic_ofstream<char>" for 1st argument
      basic_ofstream(const basic_ofstream&) = delete;
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:725:7: note: candidate constructor not viable: no known conversion from "const boost::filesystem::path" to "std::basic_ofstream<char>" for 1st argument
      basic_ofstream(basic_ofstream&& __rhs)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:682:7: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
      basic_ofstream(): __ostream_type(), _M_filebuf()
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_environment.cc:453:23: error: no matching constructor for initialization of "std::ofstream" (aka "basic_ofstream<char>") [clang-diagnostic-error]
        std::ofstream out(rbac_file_name);
                      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:697:7: note: candidate constructor not viable: no known conversion from "const boost::filesystem::path" to "const char *" for 1st argument
      basic_ofstream(const char* __s,
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:715:7: note: candidate constructor not viable: no known conversion from "const boost::filesystem::path" to "const std::string" (aka "const basic_string<char>") for 1st argument
      basic_ofstream(const std::string& __s,
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:723:7: note: candidate constructor not viable: no known conversion from "const boost::filesystem::path" to "const std::basic_ofstream<char>" for 1st argument
      basic_ofstream(const basic_ofstream&) = delete;
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:725:7: note: candidate constructor not viable: no known conversion from "const boost::filesystem::path" to "std::basic_ofstream<char>" for 1st argument
      basic_ofstream(basic_ofstream&& __rhs)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/fstream:682:7: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
      basic_ofstream(): __ostream_type(), _M_filebuf()
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8535/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_environment.cc:436:23:
error: no matching constructor for initialization of "std::ofstream" (aka "basic_ofstream<char>") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8535/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10064/ : FAILURE

Compile error at [2021-04-27T10:51:25.971Z] ../kv_engine/tests/testapp/testapp_audit.cc:51:47:
error: cannot bind non-const lvalue reference of type ?std::__cxx11::basic_string<char>&? to an rvalue of type ?std::string? {aka ?std::__cxx11::basic_string<char>?}
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10064/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9134/ : FAILURE

Compile error at [2021-04-27T10:51:01.493Z] ../kv_engine/tests/testapp/testapp_audit.cc:51:15:
error: non-const lvalue reference to type "basic_string<...>" cannot bind to a temporary of type "basic_string<...>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9134/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10455/ : FAILURE

Compile error at [2021-04-27T10:57:49.375Z] ../kv_engine/tests/testapp/testapp_audit.cc:51:15:
error: non-const lvalue reference to type "basic_string<...>" cannot bind to a temporary of type "basic_string<...>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10455/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7085/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
